0.3.6:
- PAIZO Block updates:
--- Fixed "P & C" damage type not parsed correctly.
--- Fixed ; getting parsed out of attack damage sections, confusing the damage type parsing.

0.3.5:
- VTTES support has been updated:
--- Added support for parsing bio into Biography.
--- GM Notes are now parsed into Biography as GM secret.
--- Skill notes are now parsed into the Biography as GM secret.
--- Tactics, environment, and organization are now parsed into the Biography as GM secret.
--- Added spell parsing.
--- Fixed a bug with language parsing ignoring ; as a splitting token.
--- Default NPC size is now medium.
--- Added size parsing.
--- Attacks now parse with attack and damage bonuses correctly copied from the data.
--- Disabled ability score usage for NPC weapons, and removed ability score adjustment.
--- Ability Save DCs are now copied over.
--- Added support for Space and Reach, which will be available in SFRPG from version 0.4.
--- Pasting in a VTTES json now automatically switches the text input mode to VTTES json.
--- VTTES support is no longer considered highly incomplete.
- Paizo Block updates:
--- Disabled ability score usage for NPC weapons, and removed ability score adjustment.
--- Added support for Space and Reach, which will be available in SFRPG from version 0.4.

0.3.4:
- Parser no longer fails on space and reach.
- Fixed weapon types getting overwritten even though they were valid from the item data.
- Fixed a parsing error when keywords were partially contained in values, such as "sp" contained in "spatial".
- Added additional error reporting when an item has no name due to parsing mishaps.
- Combining attack names when an attack fails to parse, propagating it to the next attack. This fixes an issue where one attack such as "claw or incorporeal claw" would get parsed as two separate attacks.
- Added support for auras, aura field will be available in sfrpg system from version 0.4.
- Fixed various little parsing mistakes.